--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "hack21-policy-dial",
   "version": "1.0.0",
   "description": "BigID hackathon 2021 - Idea - Policy Dial",
-  "main": "index.js",
-  "type": "module",
+  "private": true,
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +22,12 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "debug": "~2.6.9",
+    "express": "^4.17.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1",
+    "pug": "2.0.0-beta11"
   }
 }
